@@ -43,6 +43,9 @@ Trunk (unreleased changes)
   OPTIMIZATIONS
 
   BUG FIXES
+
+  HCAT-410: support proxy user in hcat client (thejas via daijy)
+
   HCAT-406 The "toString" method in HCatFieldSchema class return only type information. (avandana)
 
   HCAT-421 Unit test failures in trunk build (avandana)
